unpackaged/main/default/objects/pse__Proj__c/fields/psa_Project_Sponsor__c.field-meta.xml
<CustomField>
    <fullName>psa_Project_Sponsor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Sponsor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Projects (Project Sponsor)</relationshipLabel>
    <relationshipName>Projects2</relationshipName>
    <type>Lookup</type>
</CustomField>