unpackaged/main/default/objects/pse__Proj__c/fields/psa_SOW_Status__c.field-meta.xml
<CustomField>
    <fullName>psa_SOW_Status__c</fullName>
    <label>SOW Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Final Review</fullName>
            </value>
            <value>
                <fullName>Signed</fullName>
            </value>
            <value>
                <fullName>Pending Amendment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>