unpackaged/main/default/objects/pse__Proj__c/fields/psa_SteerCo_Frequency__c.field-meta.xml
<CustomField>
    <fullName>psa_SteerCo_Frequency__c</fullName>
    <label>SteerCo Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Fortnightly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Ad-Hoc</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>