unpackaged/main/default/objects/pse__Proj__c/fields/psa_Trend__c.field-meta.xml
<CustomField>
    <fullName>psa_Trend__c</fullName>
    <label>Trend</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Positive</fullName>
            </value>
            <value>
                <fullName>Negative</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Amber</fullName>
                <isActive>false</isActive>
                <label>Amber</label>
            </value>
            <value>
                <fullName>Green</fullName>
                <isActive>false</isActive>
                <label>Green</label>
            </value>
            <value>
                <fullName>Red</fullName>
                <isActive>false</isActive>
                <label>Red</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>