unpackaged/main/default/objects/pse__Proj__c/fields/psa_Trend_Visual__c.field-meta.xml
<CustomField>
    <fullName>psa_Trend_Visual__c</fullName>
    <formula>IF(ISPICKVAL(psa_Trend__c,"Yellow"),IMAGE("/resource/pse__StatusImages/yellow.png","2-Yellow"),IF(ISPICKVAL(psa_Trend__c,"Red"),IMAGE("/resource/pse__StatusImages/red.png","3-Red"),IF(ISPICKVAL(psa_Trend__c,"Green"),IMAGE("/resource/pse__StatusImages/green.png","1-Green"),"")))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trend Visual</label>
    <type>Text</type>
</CustomField>