unpackaged/main/default/objects/pse__Proj__c/fields/psa_Unique_Project_ID__c.field-meta.xml
<CustomField>
    <fullName>psa_Unique_Project_ID__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>This is the unique Project ID within the IHSM systems.</inlineHelpText>
    <label>Unique Project ID</label>
    <length>32</length>
    <type>Text</type>
</CustomField>