unpackaged/main/default/objects/pse__Proj__c/fields/psaws__Actual_Hours__c.field-meta.xml
<CustomField>
    <fullName>psaws__Actual_Hours__c</fullName>
    <formula>pse__Billable_Internal_Hours__c +  pse__Billable_External_Hours__c +  pse__Non_Billable_Internal_Hours__c +  pse__Non_Billable_External_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>