unpackaged/main/default/objects/pse__Proj__c/fields/psaws__High_Actual_Hours__c.field-meta.xml
<CustomField>
    <fullName>psaws__High_Actual_Hours__c</fullName>
    <formula>!ISBLANK(pse__Planned_Hours__c) &amp;&amp; (psaws__Actual_Hours__c &gt;= (0.8 * pse__Planned_Hours__c))</formula>
    <label>High Actual Hours</label>
    <type>Checkbox</type>
</CustomField>