unpackaged/main/default/objects/pse__Proj__c/fields/pse__Action_Count_Billing_Eligible_Records__c.field-meta.xml
<CustomField>
    <fullName>pse__Action_Count_Billing_Eligible_Records__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Saving the Project with this checkbox checked updates the fields that track Billing Eligible Business Records (TC Splits, Expenses, Milestones, Misc Adjustments, Budgets) for this Project and also auto-unchecks this Action checkbox.</description>
    <inlineHelpText>Saving the Project with this checkbox checked updates the fields that track Billing Eligible Business Records (TC Splits, Expenses, Milestones, Misc Adjustments, Budgets) for this Project and also auto-unchecks this Action checkbox.</inlineHelpText>
    <label>Action: Count Billing Eligible Records</label>
    <type>Checkbox</type>
</CustomField>