unpackaged/main/default/objects/pse__Proj__c/fields/pse__Actuals_Need_Recalc__c.field-meta.xml
<CustomField>
    <fullName>pse__Actuals_Need_Recalc__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Actuals: Need Recalc</label>
    <type>Checkbox</type>
</CustomField>