unpackaged/main/default/objects/pse__Proj__c/fields/pse__Alert_Threshold__c.field-meta.xml
<CustomField>
    <fullName>pse__Alert_Threshold__c</fullName>
    <description>Triggers an email when Percentage Used equals or exceeds the percentage value entered. Apply Billing Cap must be selected and there must also be a contact in the Alert Recipient field.</description>
    <inlineHelpText>Enter the threshold percentage that will trigger an email when the value in the Percentage Used field equals or exceeds this value. You must also select Apply Billing Cap and select a contact from the Alert Recipient field.</inlineHelpText>
    <label>Alert Threshold</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>