unpackaged/main/default/objects/pse__Proj__c/fields/pse__Allow_Expenses_Without_Assignment__c.field-meta.xml
<CustomField>
    <fullName>pse__Allow_Expenses_Without_Assignment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this field is checked, then Expense Reports (and Expenses) may be logged for this project without the Resource on the Expense Report needing to have an open and current Assignment for the Project.</description>
    <inlineHelpText>If this field is checked, then Expense Reports (and Expenses) may be logged for this project without the Resource on the Expense Report needing to have an open and current Assignment for the Project.</inlineHelpText>
    <label>Allow Expenses Without Assignment</label>
    <type>Checkbox</type>
</CustomField>