unpackaged/main/default/objects/pse__Proj__c/fields/pse__Allow_Self_Staffing__c.field-meta.xml
<CustomField>
    <fullName>pse__Allow_Self_Staffing__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Whether a resource may create an assignment to this project for his/her own resource. Checking this will allow any and all resources in the system to create assignments to this project.</inlineHelpText>
    <label>Allow Self-Staffing</label>
    <type>Checkbox</type>
</CustomField>