unpackaged/main/default/objects/pse__Proj__c/fields/pse__Amount__c.field-meta.xml
<CustomField>
    <fullName>pse__Amount__c</fullName>
    <description>The estimated total amount for this estimate before discounts are applied.</description>
    <inlineHelpText>The estimated total amount for this estimate before discounts are applied.</inlineHelpText>
    <label>Deprecated:Amount</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>