unpackaged/main/default/objects/pse__Proj__c/fields/pse__Apply_Billing_Cap__c.field-meta.xml
<CustomField>
    <fullName>pse__Apply_Billing_Cap__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to trigger an email when the project billings total is over a threshold percentage of its bookings total. There must be a contact in the Alert Recipient field and there must also be a value in the Alert Threshold field.</description>
    <inlineHelpText>Select to enable email alerts when project billings and pre-billed total equals or exceeds a percentage of its bookings total, represented by the Alert Threshold. You must select a contact from the Alert Recipient field and enter Alert Threshold value</inlineHelpText>
    <label>Apply Billing Cap</label>
    <type>Checkbox</type>
</CustomField>