unpackaged/main/default/objects/pse__Proj__c/fields/pse__Apply_Spend_Limit__c.field-meta.xml
<CustomField>
    <fullName>pse__Apply_Spend_Limit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to trigger an email when the project billings total is over a threshold percentage of its bookings total. There must be an email address in the Alert Recipient field and there must also be a value in the Alert Threshold field.</description>
    <inlineHelpText>Select to enable email alerts when project billings total equals or exceeds percentage of its bookings total, represented by the value in Alert Threshold. You must specify an email address in Alert Recipient and enter a value in Alert Threshold.</inlineHelpText>
    <label>Deprecated:Apply Spend Limit</label>
    <type>Checkbox</type>
</CustomField>