unpackaged/main/default/objects/pse__Proj__c/fields/pse__Baseline__c.field-meta.xml
<CustomField>
    <fullName>pse__Baseline__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Baseline version of this project.</description>
    <inlineHelpText>Baseline version of this project.</inlineHelpText>
    <label>Baseline</label>
    <referenceTo>pse__VersionItem_ProjectDetail__c</referenceTo>
    <relationshipLabel>Baseline</relationshipLabel>
    <relationshipName>Baseline</relationshipName>
    <type>Lookup</type>
</CustomField>