unpackaged/main/default/objects/pse__Proj__c/fields/pse__Baseline_End_Date__c.field-meta.xml
<CustomField>
    <fullName>pse__Baseline_End_Date__c</fullName>
    <description>End date recorded on the project baseline.</description>
    <formula>pse__Baseline__r.pse__End_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>End date recorded on the project baseline.</inlineHelpText>
    <label>Baseline End Date</label>
    <type>Date</type>
</CustomField>