unpackaged/main/default/objects/pse__Proj__c/fields/pse__Baseline_Project_Phase__c.field-meta.xml
<CustomField>
    <fullName>pse__Baseline_Project_Phase__c</fullName>
    <description>Project phase recorded on the project baseline.</description>
    <formula>pse__Baseline__r.pse__Project_Phase__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Project phase recorded on the project baseline.</inlineHelpText>
    <label>Baseline Project Phase</label>
    <type>Text</type>
</CustomField>