unpackaged/main/default/objects/pse__Proj__c/fields/pse__Baseline_Stage__c.field-meta.xml
<CustomField>
    <fullName>pse__Baseline_Stage__c</fullName>
    <description>Stage recorded on the project baseline.</description>
    <formula>pse__Baseline__r.pse__Stage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Stage recorded on the project baseline.</inlineHelpText>
    <label>Baseline Stage</label>
    <type>Text</type>
</CustomField>