unpackaged/main/default/objects/pse__Proj__c/fields/pse__Batch_Sequence__c.field-meta.xml
<CustomField>
    <fullName>pse__Batch_Sequence__c</fullName>
    <description>Used for reliable sorting of projects so a large collection of projects can be split into batches.</description>
    <displayFormat>{0}</displayFormat>
    <label>Batch Sequence</label>
    <type>AutoNumber</type>
</CustomField>