unpackaged/main/default/objects/pse__Proj__c/fields/pse__Batch_Sequence_Number__c.field-meta.xml
<CustomField>
    <fullName>pse__Batch_Sequence_Number__c</fullName>
    <formula>VALUE(pse__Batch_Sequence__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Batch Sequence Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>