unpackaged/main/default/objects/pse__Proj__c/fields/pse__Billable_Expense_Fee_Percentage__c.field-meta.xml
<CustomField>
    <fullName>pse__Billable_Expense_Fee_Percentage__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Fee percentage by which to increase the billable amount of any Expense logged for the Project.  0% means no increase (default), whereas 100% means double.  The calculation will apply the percentage expense fee*before* any flat expense fee.</description>
    <inlineHelpText>Fee percentage by which to increase the billable amount of any Expense logged for the Project.  0% means no increase (default), whereas 100% means double.  The calculation will apply the percentage expense fee*before* any flat expense fee.</inlineHelpText>
    <label>Billable Expense Fee Percentage</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>