unpackaged/main/default/objects/pse__Proj__c/fields/pse__Billed__c.field-meta.xml
<CustomField>
    <fullName>pse__Billed__c</fullName>
    <defaultValue>0.00</defaultValue>
    <inlineHelpText>Sum of everything billed through billing events</inlineHelpText>
    <label>Billed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>