unpackaged/main/default/objects/pse__Proj__c/fields/pse__Billing_Eligible_Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>pse__Billing_Eligible_Last_Updated__c</fullName>
    <description>When counts of Billing Eligible business records are updated on the Project, this Date field is set to indicate when the data was last captured.</description>
    <inlineHelpText>When counts of Billing Eligible business records are updated on the Project, this Date field is set to indicate when the data was last captured.</inlineHelpText>
    <label>Billing Eligible Last Updated</label>
    <type>Date</type>
</CustomField>