unpackaged/main/default/objects/pse__Proj__c/fields/pse__Billing_Queues_Need_Recalc__c.field-meta.xml
<CustomField>
    <fullName>pse__Billing_Queues_Need_Recalc__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Billing Queues Need Recalc</label>
    <type>Checkbox</type>
</CustomField>