unpackaged/main/default/objects/pse__Proj__c/fields/pse__Closed_for_Expense_Entry__c.field-meta.xml
<CustomField>
    <fullName>pse__Closed_for_Expense_Entry__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Closed for Expense Entry</label>
    <type>Checkbox</type>
</CustomField>