unpackaged/main/default/objects/pse__Proj__c/fields/pse__Daily_Timecard_Notes_Required__c.field-meta.xml
<CustomField>
    <fullName>pse__Daily_Timecard_Notes_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Daily Timecard Notes Required</label>
    <type>Checkbox</type>
</CustomField>