unpackaged/main/default/objects/pse__Proj__c/fields/pse__Discount__c.field-meta.xml
<CustomField>
    <fullName>pse__Discount__c</fullName>
    <description>The amount to discount from the total estimated amount for the estimate.</description>
    <formula>pse__Amount__c * pse__Percent_Discount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The amount to discount from the total estimated amount for the estimate.</inlineHelpText>
    <label>Deprecated:Discount (Amount)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>