unpackaged/main/default/objects/pse__Proj__c/fields/pse__Duration__c.field-meta.xml
<CustomField>
    <fullName>pse__Duration__c</fullName>
    <description>The duration of the project in days.</description>
    <formula>pse__End_Date__c - pse__Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>