unpackaged/main/default/objects/pse__Proj__c/fields/pse__Estimated_Cost__c.field-meta.xml
<CustomField>
    <fullName>pse__Estimated_Cost__c</fullName>
    <description>The estimated total cost of this estimate.</description>
    <inlineHelpText>The estimated total cost of this estimate.</inlineHelpText>
    <label>Deprecated:Estimated Cost</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>