unpackaged/main/default/objects/pse__Proj__c/fields/pse__Estimated_Margin__c.field-meta.xml
<CustomField>
    <fullName>pse__Estimated_Margin__c</fullName>
    <description>The difference between the estimated amount and estimated cost for this estimate.</description>
    <formula>0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The difference between the estimated amount and estimated cost for this estimate.</inlineHelpText>
    <label>Deprecated:Estimated Margin (Amount)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>