unpackaged/main/default/objects/pse__Proj__c/fields/pse__Exclude_from_Backlog__c.field-meta.xml
<CustomField>
    <fullName>pse__Exclude_from_Backlog__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exclude from Backlog</label>
    <type>Checkbox</type>
</CustomField>