unpackaged/main/default/objects/pse__Proj__c/fields/pse__Exclude_From_Billing__c.field-meta.xml
<CustomField>
    <fullName>pse__Exclude_From_Billing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true, do not include this project when generating billing events</description>
    <label>Exclude From Billing</label>
    <type>Checkbox</type>
</CustomField>