unpackaged/main/default/objects/pse__Proj__c/fields/pse__ExcludeProjectFromDisplayOnBilling__c.field-meta.xml
<CustomField>
    <fullName>pse__ExcludeProjectFromDisplayOnBilling__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If selected, excludes the project from displaying on the billing screen.</description>
    <inlineHelpText>If selected, excludes the project from displaying on the billing screen.</inlineHelpText>
    <label>Exclude Project From Display On Billing</label>
    <type>Checkbox</type>
</CustomField>