unpackaged/main/default/objects/pse__Proj__c/fields/pse__Expense_Notes__c.field-meta.xml
<CustomField>
    <fullName>pse__Expense_Notes__c</fullName>
    <label>Expense Notes</label>
    <type>TextArea</type>
</CustomField>