unpackaged/main/default/objects/pse__Proj__c/fields/pse__External_Costs__c.field-meta.xml
<CustomField>
    <fullName>pse__External_Costs__c</fullName>
    <defaultValue>0.00</defaultValue>
    <inlineHelpText>Approved timecard hours * cost rate on Assignment for all resources with the external resource flagged as true</inlineHelpText>
    <label>External Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>