unpackaged/main/default/objects/pse__Proj__c/fields/pse__Financial_Visual__c.field-meta.xml
<CustomField>
    <fullName>pse__Financial_Visual__c</fullName>
    <description>Shows the financial status of the project based on the color selected from the corresponding Financial Status picklist.</description>
    <formula>IF(ISPICKVAL(pse__Financial_Status__c,"Yellow"),IMAGE("/resource/pse__StatusImages/yellow.png","2-Yellow"),IF(ISPICKVAL(pse__Financial_Status__c,"Red"),IMAGE("/resource/pse__StatusImages/red.png","3-Red"),IF(ISPICKVAL(pse__Financial_Status__c,"Green"),IMAGE("/resource/pse__StatusImages/green.png","1-Green"),"")))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Shows the financial status of the project based on the color selected from the corresponding Financial Status picklist.</inlineHelpText>
    <label>Financial Status</label>
    <type>Text</type>
</CustomField>